--- a/exOne/development copy.ipynb
+++ b/exOne/development copy.ipynb
@@ -23,6 +23,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello world, I'm finally using github :)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
