--- a/exOne/development copy.ipynb
+++ b/exOne/development copy.ipynb
@@ -23,15 +23,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Hello world, I'm finally using github :)\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -486,10 +477,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_imputed.isnull().sum()\n",
+    "import json as js\n",
+    "\n",
+    "geo_europe = js.load(open(\"./data/custom.geo.json\", 'r'))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -603,31 +599,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "432\n",
+      "431\n",
       "\n",
-      "       _ , - - . _ . - ,\n",
-      "      / \\ _ r - , \\ _  )\n",
-      ". - . )   _ ; = ' _ /   ( . ;\n",
-      "   \\   \\ '           \\ / S  )\n",
-      "     L . ' - .   _ . ' | - '\n",
-      "  < _ ` - ' \\ ' _ . ' /\n",
-      "       ` ' - . _ ( \\\n",
-      "_______ _ _ _       \\\\ ,             _ _ _\n",
-      "_______\\   . ' - .   \\\\       . - ' _ .   /\n",
-      "________' . _ '   ' . \\ \\ / . - ' _ . '\n",
+      "______ _ , - - . _ . - ,\n",
+      "______/ \\ _ r - , \\ _XX)\n",
+      ". - . )XX _ ; = ' _ /XX ( . ;\n",
+      "____\\XX \\ '---------\\ / SXX)\n",
+      "_____L . ' - .XX _ . ' | - '\n",
+      "__< _ ` - ' \\ ' _ . ' /\n",
+      "_______` ' - . _ ( \\\n",
+      "_______ _ _ _XXXXXX \\\\ ,XXXXXXXXXXXX _ _ _\n",
+      "_______\\XX . ' - .XX \\\\XXXXXX . - ' _ .XX /\n",
+      "________' . _ 'XX ' . \\ \\ / . - ' _ . '\n",
       "_____________' - - ` ` \\ ( ' - - '\n",
       "________________________\\\\\n",
       "_______ 1 / 1 0 0 ______`\\\\,\n",
       "__________________________\\|\n",
       "\n",
-      "_ , - - . _ . - , / \\ _ r - , \\ _ ) . - . ) _ ; = ' _ / ( . ; \\ \\ ' \\ / S ) L . ' - . _ . ' | - ' < _ ` - ' \\ ' _ . ' / ` ' - . _ ( \\ _______ _ _ _ \\\\ , _ _ _ _______\\ . ' - . \\\\ . - ' _ . / ________' . _ ' ' . \\ \\ / . - ' _ . ' _____________' - - ` ` \\ ( ' - - ' ________________________\\\\ _______ 1 / 1 0 0 ______`\\\\, __________________________\\|\n"
+      "______ _ , - - . _ . - , ______/ \\ _ r - , \\ _XX) . - . )XX _ ; = ' _ /XX ( . ; ____\\XX \\ '---------\\ / SXX) _____L . ' - .XX _ . ' | - ' __< _ ` - ' \\ ' _ . ' / _______` ' - . _ ( \\ _______ _ _ _XXXXXX \\\\ ,XXXXXXXXXXXX _ _ _ _______\\XX . ' - .XX \\\\XXXXXX . - ' _ .XX / ________' . _ 'XX ' . \\ \\ / . - ' _ . ' _____________' - - ` ` \\ ( ' - - ' ________________________\\\\ _______ 1 / 1 0 0 ______`\\\\, __________________________\\|\n"
      ]
     }
    ],
@@ -637,7 +633,7 @@
     "______ _ , - - . _ . - ,\n",
     "______/ \\ _ r - , \\ _  )\n",
     ". - . )   _ ; = ' _ /   ( . ;\n",
-    "____\\   \\\\ '           \\ / S  )\n",
+    "____\\   \\\\ '---------\\ / S  )\n",
     "_____L . ' - .   _ . ' | - '\n",
     "__< _ ` - ' \\\\ ' _ . ' /\n",
     "_______` ' - . _ ( \\\\\n",
@@ -649,7 +645,7 @@
     "_______ 1 / 1 0 0 ______`\\\\\\,\n",
     "__________________________\\|\n",
     "\"\"\"\n",
-    "# string = string.replace(' ', '_')\n",
+    "string = string.replace('  ', 'XX')\n",
     "print(string)\n",
     "\n",
     "\n",
