--- a/exOne/development_copy_geo.ipynb
+++ b/exOne/development_copy_geo.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Information Visualization - Exercise 1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The purpose of this exercise is to develop skills in working with raw data, as well as in data imputation and cleaning. These are crucial tasks for anyone involved in data analysis or machine learning, as the quality of the data you work with can have a significant impact on the accuracy of your results.\n",
+    "To start, we will be using a provided CSV file that contains information about agriculture in different countries around the world. This file may be messy and unstructured, which is a common scenario when dealing with real-world data. Therefore, we will need to employ various techniques to clean and prepare the data for analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -97,6 +113,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One of the first steps in this process will be to identify and remove any rows that contain aggregated values. Aggregated values represent data that has been combined or summarized in some way, such as by averaging or summing. While this information can be useful in certain contexts, for our purposes we are only interested in the individual countries. Therefore, we will drop these rows to ensure that we are working exclusively with country-level data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -131,6 +155,16 @@
    "metadata": {},
    "source": [
     "## selecting well represented columns"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the code snippet above, we are utilizing the missingno package to generate a matrix that visually represents the missing values in our data. This matrix uses white spaces to indicate missing values, making it easy to identify which attributes or columns have the most missing data.\n",
+    "As we can see from the matrix, some columns only have a few values available for analysis. In such cases, imputing missing values may not be a viable option as we have too little information to make accurate predictions. This can be problematic for data analysis and modeling, as missing data can significantly impact the accuracy and validity of our results.\n",
+    "Therefore, we drop columns with more than 30% of NaNs. This threshold was chosen as it strikes a balance between preserving data while ensuring that we are not working with attributes that have a significant amount of missing information."
    ]
   },
   {
@@ -266,6 +300,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To ensure that our imputation method would not use data from one country to fill in missing values for another, we first grouped our data by country. This approach ensured that the imputation method would only use data from the same country to fill in missing values, preserving the integrity of our data.\n",
+    "While the mean imputation method can be a suitable option for some types of data, it may not be the best approach for data that varies significantly over time. In our case, we were analyzing changes in agricultural data over multiple years, making the mean imputation method less appropriate for our needs.\n",
+    "As such, we initially chose to work with the K-Nearest Neighbors (KNN) imputation method from the scikit-learn library. This method involves filling in missing values with the average of values from the K most similar data points. However, after implementing this method, we noticed that it made some questionable choices when filling in missing values.\n",
+    "In the end, we decided to use the interpolate() function from the pandas package. This method involves filling in missing values by interpolating between existing values. We were unfortunately not successful to impute all of our data, however, it was enough to work with for now."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Imputation Visualization"
    ]
   },
@@ -302,6 +346,14 @@
     "    ax.plot(time, df_country_oig.iloc[:,i], color='green')\n",
     "    ax.set_axisbelow(True)\n",
     "    ax.grid()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To test how well our data imputation works we first only considered one country, Afganistan. The green line represents the original data set and the red line represents the imputed data. For the attribute GDP per capita, we observe a big chunk of data was missing before, however, the data imputation method successfully filled in the missing values."
    ]
   },
   {
