hab die nachricht fast vergessen

--- a/ExerciseTwo/preprocessing/herbert_preprocessing.ipynb
+++ b/ExerciseTwo/preprocessing/herbert_preprocessing.ipynb
@@ -497,15 +497,17 @@
     "    df_PCA = pd.DataFrame(data = principalComponents, index = df_2020['Country Code'].values\n",
     "                          , columns = ['PC1', 'PC2'])\n",
     "    \n",
+    "    return df_PCA\n",
+    "\n",
     "    # Plot the first two principal components\n",
-    "    plt.scatter(df_PCA.PC1, df_PCA.PC2, c=y)\n",
-    "    plt.xlabel('PC1')\n",
-    "    plt.ylabel('PC2')\n",
+    "    #plt.scatter(df_PCA.PC1, df_PCA.PC2, c=y)\n",
+    "    #plt.xlabel('PC1')\n",
+    "    #plt.ylabel('PC2')\n",
     "\n",
-    "    for cn in df_PCA.index:\n",
-    "        plt.annotate(cn, (df_PCA.PC1.loc[cn], df_PCA.PC2.loc[cn]))\n",
+    "    #for cn in df_PCA.index:\n",
+    "    #    plt.annotate(cn, (df_PCA.PC1.loc[cn], df_PCA.PC2.loc[cn]))\n",
     "\n",
-    "    plt.show()\n",
+    "    #plt.show()\n",
     "\n",
     "\n",
     "PrComAnalysis(df_selected40)"
