--- a/ExerciseTwo/dash_app.ipynb
+++ b/ExerciseTwo/dash_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,11 +25,44 @@
     "\n",
     "import os\n",
     "\n",
+    "# -----------------------------------------------------------------------------------\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "def PrComAnalysis(df, string):\n",
+    "    df_2020 = df[df[\"year\"] == 2020].copy()\n",
+    "\n",
+    "    # distributing the dataset into two components X and Y\n",
+    "    tmp = list(df_2020.columns)\n",
+    "    tmp.remove(string)\n",
+    "    tmp.remove('Country Name')\n",
+    "    tmp.remove('Country Code')\n",
+    "    tmp.remove('year') \n",
+    "\n",
+    "    # distributing the dataset into two components X and y\n",
+    "    # We decided to do the regression on Agricultural land (% of land area)\n",
+    "    X = df_2020[tmp].values \n",
+    "    y =  df_2020.loc[:,[string]].values\n",
+    "\n",
+    "    # fitting the Standard scale\n",
+    "    X_scaled = preprocessing.scale(X)\n",
+    "\n",
+    "    # Create a PCA object and fit it to the data\n",
+    "    pca = PCA(n_components=2)\n",
+    "    principalComponents = pca.fit_transform(X_scaled)\n",
+    "\n",
+    "    df_PCA = pd.DataFrame(data = principalComponents, index = df_2020['Country Code'].values\n",
+    "                          , columns = ['PC1', 'PC2'])\n",
+    "    \n",
+    "    return df_PCA\n",
+    "# -----------------------------------------------------------------------------------\n",
+    "\n",
     "# load data\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/gapminder2007.csv')\n",
+    "# df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/gapminder2007.csv')\n",
     "# for i in range(0,4):\n",
     "#     name = 'new_col_' + str(i)\n",
     "#     df[name] = 1\n",
+    "df = pd.read_csv('./data/claras_dataframe.csv')\n",
     "\n",
     "\n",
     "# Initialize the app - incorporate a Dash Bootstrap theme\n",
