--- a/ExerciseTwo/dash_app.ipynb
+++ b/ExerciseTwo/dash_app.ipynb
@@ -267,6 +267,25 @@
    "source": [
     "df.iloc[:,0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'urlopen' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mwith\u001b[39;00m urlopen(\u001b[39m'\u001b[39m\u001b[39mhttps://raw.githubusercontent.com/plotly/datasets/master/geojson-counties-fips.json\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m response:\n\u001b[1;32m      2\u001b[0m         counties \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(response)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'urlopen' is not defined"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
