--- a/ExerciseTwo/dash_app.ipynb
+++ b/ExerciseTwo/dash_app.ipynb
@@ -289,6 +289,78 @@
     "print(dict(zip(list1, list2)))\n",
     "print(type(zip()))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     AL\n",
+       "1     AK\n",
+       "2     AZ\n",
+       "3     AR\n",
+       "4     CA\n",
+       "5     CO\n",
+       "6     CT\n",
+       "7     DE\n",
+       "8     FL\n",
+       "9     GA\n",
+       "10    HI\n",
+       "11    ID\n",
+       "12    IL\n",
+       "13    IN\n",
+       "14    IA\n",
+       "15    KS\n",
+       "16    KY\n",
+       "17    LA\n",
+       "18    ME\n",
+       "19    MD\n",
+       "20    MA\n",
+       "21    MI\n",
+       "22    MN\n",
+       "23    MS\n",
+       "24    MO\n",
+       "25    MT\n",
+       "26    NE\n",
+       "27    NV\n",
+       "28    NH\n",
+       "29    NJ\n",
+       "30    NM\n",
+       "31    NY\n",
+       "32    NC\n",
+       "33    ND\n",
+       "34    OH\n",
+       "35    OK\n",
+       "36    OR\n",
+       "37    PA\n",
+       "38    RI\n",
+       "39    SC\n",
+       "40    SD\n",
+       "41    TN\n",
+       "42    TX\n",
+       "43    UT\n",
+       "44    VT\n",
+       "45    VA\n",
+       "46    WA\n",
+       "47    WV\n",
+       "48    WI\n",
+       "49    WY\n",
+       "Name: code, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/2011_us_ag_exports.csv')\n",
+    "df['code']"
+   ]
   }
  ],
  "metadata": {
