updates on figure workflow

--- a/ExerciseThree_Project_Spotify/notebooks/dev.ipynb
+++ b/ExerciseThree_Project_Spotify/notebooks/dev.ipynb
@@ -3057,6 +3057,15 @@
     "display(result_df.mean())\n",
     "display(result_df.median())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{'points': [{'curveNumber': 0, 'pointNumber': 19, 'pointIndex': 19, 'x': '2023-06-13 00:32:06.732', 'y': 0, 'text': 'Sky Over Tokyo - RADWIMPS', 'bbox': {'x0': 545.19, 'x1': 560.19, 'y0': 89, 'y1': 104}, 'customdata': ['Sky Over Tokyo', 'RADWIMPS']}]}"
+   ]
   }
  ],
  "metadata": {
